added html/js code to display test movie data

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,5 +43,6 @@
     <form action="/logout" method="GET" class="form-signin">
         <button type="submit" class="logout-btn">Logout</button>
     </form>
+    <a href="movie_year.html">test movie</a>
 </body>
 </html>
