playing around with ways to display data

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,6 +43,7 @@
     <form action="/logout" method="GET" class="form-signin">
         <button type="submit" class="logout-btn">Logout</button>
     </form>
-    <a href="movie_year.html">test movie</a>
+    <a href="movie_year.html">test movie</a><br>
+    <a href="movie_search.html">test movie</a><br>
 </body>
 </html>
