added pages to search for movies by country, director & genre for testing

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,7 +43,10 @@
     <form action="/logout" method="GET" class="form-signin">
         <button type="submit" class="logout-btn">Logout</button>
     </form>
-    <a href="movie_year.html">test movie</a><br>
-    <a href="movie_search.html">test movie</a><br>
+    <a href="movie_year.html">Movies from 2015</a><br>
+    <a href="movie_search_title.html">Search movie by title</a><br>
+    <a href="movie_search_director.html">Search movie by director</a><br>
+    <a href="movie_search_genre.html">Search movie by genre</a><br>
+    <a href="movie_search_country.html">Search movie by country</a><br>
 </body>
 </html>
