--- a/src/main/resources/static/movie_search_country.html
+++ b/src/main/resources/static/movie_search_country.html
@@ -10,9 +10,9 @@
     <div id="app">
         <h1>Movie Information</h1>
         <div id="movie-details"></div>
-        <input type="text" id="movie-title" placeholder="Enter movie title">
-        <button id="load-movie">Load Movie Data</button>
+        <input type="text" id="movie-country" placeholder="Enter a country">
+        <button id="load-movie-by-country">Load Movie Data</button>
     </div>
-    <script src="/js/movieInfoByTitle.js"></script>
+<script src="/js/movieInfoByCountry.js"></script>
 </body>
 </html>
