--- a/src/main/resources/static/create-movie.html
+++ b/src/main/resources/static/create-movie.html
@@ -29,6 +29,6 @@
 
         <button type="button" id="create-movie">Submit</button>
     </form>
-    <script src="/js/movieCreate.js"></script>
+    <script src="/js/create-movie.js"></script>
 </body>
 </html>
