--- a/src/main/resources/static/search-movies-by-country.html
+++ b/src/main/resources/static/search-movies-by-country.html
@@ -13,6 +13,7 @@
         <input type="text" id="movie-country" placeholder="Enter a country">
         <button id="load-movie-by-country">Load Movie Data</button>
     </div>
-<script src="/js/movieInfoByCountry.js"></script>
+    <script src="/js/display-movie-info.js"></script>
+    <script src="/js/search-movies-by-country.js"></script>
 </body>
 </html>
