--- a/src/main/resources/static/search-movies-by-title.html
+++ b/src/main/resources/static/search-movies-by-title.html
@@ -10,9 +10,10 @@
     <div id="app">
         <h1>Movie Information</h1>
         <div id="movie-details"></div>
-        <input type="text" id="movie-director" placeholder="Enter a director">
-        <button id="load-movie-by-director">Load Movie Data</button>
+        <input type="text" id="movie-title" placeholder="Enter movie title">
+        <button id="load-movie-by-title">Load Movie Data</button>
     </div>
-<script src="/js/movieInfoByDirector.js"></script>
+    <script src="/js/display-movie-info.js"></script>
+    <script src="/js/search-movies-by-title.js"></script>
 </body>
 </html>
