added movies search by year + additional refactoring

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,10 +33,11 @@
 
         <div class="links">
             <a href="movie_year.html">Movies from 2015</a>
-            <a href="search-movies-by-title.html">Search movie by title</a>
-            <a href="search-movies-by-director.html">Search movie by director</a>
-            <a href="search-movies-by-genre.html">Search movie by genre</a>
-            <a href="search-movies-by-country.html">Search movie by country</a>
+            <a href="search-movies-by-title.html">Search movies by title</a>
+            <a href="search-movies-by-director.html">Search movies by director</a>
+            <a href="search-movies-by-genre.html">Search movies by genre</a>
+            <a href="search-movies-by-country.html">Search movies by country</a>
+            <a href="search-movies-by-year.html">Search movies by year</a>
         </div>
     </div>
 </body>
