--- a/src/main/resources/static/search-movies-by-country.html
+++ b/src/main/resources/static/search-movies-by-country.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <h1>Movie Information</h1>
+        <h1>Movie Search by Country</h1>
         <div id="movie-details"></div>
         <input type="text" id="movie-country" placeholder="Enter a country">
         <button id="load-movie-by-country">Load Movie Data</button>
