--- a/src/main/resources/static/search-movies-by-genre.html
+++ b/src/main/resources/static/search-movies-by-genre.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <h1>Movie Information</h1>
+        <h1>Movie Search by Genre</h1>
         <div id="movie-details"></div>
         <input type="text" id="movie-genre" placeholder="Enter a genre">
         <button id="load-movie-by-genre">Load Movie Data</button>
