--- a/src/main/resources/static/search-movies-by-director.html
+++ b/src/main/resources/static/search-movies-by-director.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <h1>Movie Information</h1>
+        <h1>Movie Search by Director</h1>
         <div id="movie-details"></div>
         <input type="text" id="movie-director" placeholder="Enter a director">
         <button id="load-movie-by-director">Load Movie Data</button>
