added placeholder poster + refactoring

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
         </form>
 
         <div class="links">
-            <a href="movie_year.html">Movies from 2015</a>
+            <a href="create-movie.html">Add a new movie</a>
             <a href="search-movies-by-title.html">Search movies by title</a>
             <a href="search-movies-by-director.html">Search movies by director</a>
             <a href="search-movies-by-genre.html">Search movies by genre</a>
