--- a/src/main/resources/static/search-movies-by-title.html
+++ b/src/main/resources/static/search-movies-by-title.html
@@ -10,7 +10,7 @@
     <div id="app">
         <h1>Movie Search by Title</h1>
         <div id="movie-details"></div>
-        <input type="text" id="movie-title" placeholder="Enter movie title">
+        <input type="text" id="movie-title" placeholder="Enter movie title/IMDb ID">
         <button id="load-movie-by-title">Load Movie Data</button>
     </div>
     <script src="/js/display-movie-info.js"></script>
