--- a/src/main/resources/static/search-movies-by-country.html
+++ b/src/main/resources/static/search-movies-by-country.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie info</title>
+    <title>Movie Info by Country</title>
     <link rel="stylesheet" href="/css/dark_theme.css">
 </head>
 <body>
