added poster_url to movie + fixed null entries in movies table

--- a/src/main/resources/static/create-movie.html
+++ b/src/main/resources/static/create-movie.html
@@ -24,8 +24,11 @@
         <label for="country">Country:</label><br>
         <input type="text" id="country" name="country" required><br>
 
-        <label for="imdb_id">IMDB ID:</label><br>
-        <input type="text" id="imdb_id" name="imdb_id" required><br><br>
+        <label for="imdb_id">IMDb ID:</label><br>
+        <input type="text" id="imdb_id" name="imdb_id" required><br>
+
+        <label for="poster_url">Poster URL:</label><br>
+        <input type="text" id="poster_url" name="poster_url" required><br><br>
 
         <button type="button" id="create-movie">Submit</button>
     </form>
