--- a/src/main/resources/static/create-movie.html
+++ b/src/main/resources/static/create-movie.html
@@ -15,6 +15,9 @@
         <label for="release_date">Release Date:</label><br>
         <input type="date" id="release_date" name="release_date" required><br>
 
+        <label for="runtime">Runtime:</label><br>
+        <input type="number" id="runtime" name="runtime" required><br>
+
         <label for="director">Director:</label><br>
         <input type="text" id="director" name="director" required><br>
 
