--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,12 +32,12 @@
         </form>
 
         <div class="links">
-            <a href="create-movie.html">Add a new movie</a>
-            <a href="search-movies-by-title.html">Search movies by title</a>
-            <a href="search-movies-by-director.html">Search movies by director</a>
-            <a href="search-movies-by-genre.html">Search movies by genre</a>
-            <a href="search-movies-by-country.html">Search movies by country</a>
-            <a href="search-movies-by-year.html">Search movies by year</a>
+            <a href="create-movie.html" target="_blank">Add a new movie</a>
+            <a href="search-movies-by-title.html" target="_blank">Search movies by title</a>
+            <a href="search-movies-by-director.html" target="_blank">Search movies by director</a>
+            <a href="search-movies-by-genre.html" target="_blank">Search movies by genre</a>
+            <a href="search-movies-by-country.html" target="_blank">Search movies by country</a>
+            <a href="search-movies-by-year.html" target="_blank">Search movies by year</a>
         </div>
     </div>
 </body>
