changes to index.html for easier navigating between pages

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,13 +31,15 @@
             <button class="auth-button" type="submit" >Logout</button>
         </form>
 
-        <div class="links">
-            <a href="create-movie.html" target="_blank">Add a new movie</a>
-            <a href="search-movies-by-title.html" target="_blank">Search movies by title</a>
-            <a href="search-movies-by-director.html" target="_blank">Search movies by director</a>
-            <a href="search-movies-by-genre.html" target="_blank">Search movies by genre</a>
-            <a href="search-movies-by-country.html" target="_blank">Search movies by country</a>
-            <a href="search-movies-by-year.html" target="_blank">Search movies by year</a>
+        <div class="grid-container">
+            <a href="create-movie.html" target="_blank" class="tile">Add a new movie</a>
+            <a href="create-movie.html" target="_blank" class="tile">Add a new actor</a>
+            <a href="search-movies-by-title.html" target="_blank" class="tile">Search movies by title</a>
+            <a href="search-movies-by-director.html" target="_blank" class="tile">Search movies by director</a>
+            <a href="search-movies-by-genre.html" target="_blank" class="tile">Search movies by genre</a>
+            <a href="search-movies-by-country.html" target="_blank" class="tile">Search movies by country</a>
+            <a href="search-movies-by-year.html" target="_blank" class="tile">Search movies by year</a>
+            <a href="http://localhost:8080/actors/search" target="_blank" class="tile">Search actors</a>
         </div>
     </div>
 </body>
