fixed movie -> actor relation + more testing

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,7 +33,7 @@
 
         <div class="grid-container">
             <a href="create-movie.html" target="_blank" class="tile">Add a new movie</a>
-            <a href="create-movie.html" target="_blank" class="tile">Add a new actor</a>
+            <a href="create-actor.html" target="_blank" class="tile">Add a new actor</a>
             <a href="search-movies-by-title.html" target="_blank" class="tile">Search movies by title</a>
             <a href="search-movies-by-director.html" target="_blank" class="tile">Search movies by director</a>
             <a href="search-movies-by-genre.html" target="_blank" class="tile">Search movies by genre</a>
